--- a/src/app/component/transfer/transfer.component.html
+++ b/src/app/component/transfer/transfer.component.html
@@ -39,7 +39,7 @@
         <nz-form-control [nzSpan]="12">{{ filehash }}</nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label [nzSpan]="6">限制轮询范围</nz-form-label>
+        <nz-form-label [nzSpan]="6">限制轮播范围</nz-form-label>
         <nz-form-control [nzSpan]="12">
           <nz-input-number-group nz-row [nzGutter]="8" nzSize="default">
             <div nz-col nzSpan="6">
