--- a/src/app/component/transfer/transfer.component.html
+++ b/src/app/component/transfer/transfer.component.html
@@ -1,7 +1,7 @@
 <nz-card style="width: 400px; height: 40vh; max-width: 80vw; margin: 150px auto">
   <nz-radio-group [(ngModel)]="loopTime" (ngModelChange)="changeLoopSpeed()">
     <label nz-radio nzValue="100">快速</label>
-    <label nz-radio nzValue="200">中等</label>
+    <label nz-radio nzValue="200">中速</label>
     <label nz-radio nzValue="400">慢速</label>
     <label nz-radio nzValue="800">特慢</label>
   </nz-radio-group>
