--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -1,16 +1,9 @@
 <nz-card style="width: 400px; height: 40vh; max-width: 80vw; margin: 150px auto">
-  <nz-radio-group ngDefaultControl [(ngModel)]="loopTime" (ngModelChange)="changeLoopSpeed()">
-    <label nz-radio nzValue="100">快速</label>
-    <label nz-radio nzValue="200">中速</label>
-    <label nz-radio nzValue="400">慢速</label>
-    <label nz-radio nzValue="800">特慢</label>
-  </nz-radio-group>
-  <p></p>
-  <nz-upload nzType="drag" [nzMultiple]="false" [nzShowUploadList]="false" (nzChange)="change($event)">
+  <nz-upload nzType="drag" nzSize="10240" [nzMultiple]="false" [nzShowUploadList]="false" (nzChange)="change($event)">
     <p class="ant-upload-drag-icon">
       <span nz-icon nzType="inbox"></span>
     </p>
-    <p class="ant-upload-text">点击或拖拽文件至此区域即可上传</p>
+    <p class="ant-upload-text">点击或拖拽文件至此区域即可上传<br /><br />仅支持小于100m的文件</p>
   </nz-upload>
 </nz-card>
 
@@ -22,25 +15,25 @@
   [nzTitle]="title"
   [nzFooter]="footer"
   (nzOnCancel)="handleOk()"
-  [nzBodyStyle]="modalBodyStyle"
+  [nzBodyStyle]="{ padding: '0 24px' }"
 >
   <ng-container *nzModalContent>
     <ng-container>
       <nz-form-item>
-        <nz-form-label [nzSpan]="6">文件名</nz-form-label>
-        <nz-form-control [nzSpan]="12">{{ filename }}</nz-form-control>
+        <nz-form-label nzSpan="6">文件名</nz-form-label>
+        <nz-form-control nzSpan="12">{{ filename }}</nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label [nzSpan]="6">文件大小</nz-form-label>
-        <nz-form-control [nzSpan]="12">{{ filesize }}</nz-form-control>
+        <nz-form-label nzSpan="6">文件大小</nz-form-label>
+        <nz-form-control nzSpan="12">{{ filesize }}</nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label [nzSpan]="6">文件 MD5</nz-form-label>
-        <nz-form-control [nzSpan]="12">{{ filehash }}</nz-form-control>
+        <nz-form-label nzSpan="6">文件 MD5</nz-form-label>
+        <nz-form-control nzSpan="12">{{ filehash }}</nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label [nzSpan]="6">限制轮播范围</nz-form-label>
-        <nz-form-control [nzSpan]="12">
+        <nz-form-label nzSpan="6">限制轮播范围</nz-form-label>
+        <nz-form-control nzSpan="12">
           <nz-input-number-group nz-row [nzGutter]="8" nzSize="default">
             <div nz-col nzSpan="6">
               <nz-input-number
@@ -48,9 +41,9 @@
                 ngDefaultControl
                 [(ngModel)]="loopStart"
                 (ngModelChange)="setResetLoop()"
-                [nzMin]="0"
+                nzMin="1"
                 [nzMax]="total"
-                [nzStep]="1"
+                nzStep="1"
                 style="width: 100%"
               />
             </div>
@@ -60,13 +53,26 @@
                 ngDefaultControl
                 [(ngModel)]="loopEnd"
                 (ngModelChange)="setResetLoop()"
-                [nzMin]="0"
+                nzMin="1"
                 [nzMax]="total"
-                [nzStep]="1"
+                nzStep="1"
                 style="width: 100%"
               />
             </div>
           </nz-input-number-group>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzSpan="6">播放速度</nz-form-label>
+        <nz-form-control nzSpan="12">
+          <nz-slider nzMin="1" nzMax="10" [(ngModel)]="playSpeed" (ngModelChange)="loopTimeChange($event * 1000000)" />
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item style="margin: 5px 0; display: flex; flex-direction: row">
+        <nz-form-control nzOffset="6">
+          <button nz-button nzType="primary" (click)="backward()">后退</button>
+          <button nz-button nzType="primary" (click)="stop()">暂停/播放</button>
+          <button nz-button nzType="primary" (click)="forward()">前进</button>
         </nz-form-control>
       </nz-form-item>
       <qrcode nz-row [qrData]="value" [allowEmptyString]="true" [width]="600" [errorCorrectionLevel]="'L'" />
@@ -75,7 +81,7 @@
 </nz-modal>
 
 <ng-template #title>
-  <h4>发送中 [ {{ loopIndex }} / {{ total }} ]</h4>
+  <h4>发送中 [ {{ loopIndex }} / {{ loopEnd }} ]</h4>
 </ng-template>
 <ng-template #footer>
   <button nz-button nzType="primary" nzDanger (click)="handleOk()">结束传输</button>
